--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -406,6 +406,10 @@
 	margin-left: 10px;
 }
 
+#basicModal .main-video {
+	background: #31374c;
+}
+
 #basicModal .iframe {
 	width: 1300px;
 	height: 600px;
@@ -415,8 +419,42 @@
 	width: 100%;
 	height: 140px;
 	margin: 0px;
+	padding-top: 20px;
 	background: #31374c;
 	font-size: 22px;
 	color: rgb(163,167,179);
 }
 
+#basicModal #ipViewHN {
+	margin-left: 10px;	
+}
+#basicModal #ipViewHN .slider-selection {
+	background: rgb(253,153,126);
+}
+#basicModal #ipViewHN .slider-handle {
+	background: rgb(230,234,248);
+}
+
+#basicModal #ipViewCN {
+	margin-left: 10px;	
+}
+#basicModal #ipViewCN .slider-selection {
+	background: rgb(253,153,126);
+}
+#basicModal #ipViewCN .slider-handle {
+	background: rgb(230,234,248);
+}
+
+#basicModal .footer-content .buttonBox button {
+	width: 140px;
+	height: 70px;
+	color: rgb(255,255,255);
+}
+
+#basicModal .footer-content .buttonBox .btnLike {
+	background: rgb(253,153,126);
+}
+
+#basicModal .footer-content .buttonBox .btnAdd {
+	background: rgb(184,184,184) 
+}
