--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -320,8 +320,13 @@
 	width: 1000px;
 }
 
+.vlist .box {
+	height: 270px;
+}
+
 .vlist .box .overlay {
 	width: 490px;
+	height: 280px;
 }
 
 .vlist .list-info {
@@ -331,24 +336,24 @@
   	margin-left: 30px;
   	width: 500px;
 
-  	font-size: 20px;
+  	font-size: 16px;
   	color: rgb(163,167,179);
 }
 
 .vlist .list-info .titleD {	
-	font-size: 26px;
+	font-size: 20px;
 	font-weight: bold;
 	color: rgb(101,107,124);
 }
 
 .vlist .list-info .youtube_user_id {
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: bold;
 	color: rgb(101,107,124);
 }
 
 .vlist .list-info .category {
-	font-size: 20px;
+	font-size: 16px;
 	color: rgb(101,107,124);
 }
 
