--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -222,8 +222,8 @@
 
 .header_panel .dropdown .dropdown-menu a {
 	color: rgb(255,255,255);
-	font-size: 18px;	
-	height: 52px;
+	font-size: 14px;	
+	height: 42px;
 	line-height: 33px;	
 }
 
@@ -371,7 +371,7 @@
 
 /* video Modal */
 #basicModal .modal-dialog {
-	width: 1300px;
+	width: 1100px;
 }
 
 #basicModal .modal-body {
@@ -380,7 +380,7 @@
 
 #basicModal .titleD {	
 	margin: 30px;
-	font-size: 36px;
+	font-size: 26px;
 	font-weight: bold;
 	color: rgb(101,107,124);
 }
@@ -388,13 +388,12 @@
 #basicModal .close {
 	position: absolute;
 	top: 20px;
-	right: 20px;
-	font-size: 34px;
+	right: 20px;	
 }
 
 #basicModal .detail-infos {	
 	margin: 30px;
-	font-size: 22px;
+	font-size: 16px;
 	color: rgb(163,167,179);
 }
 
@@ -416,22 +415,22 @@
 }
 
 #basicModal .iframe {
-	width: 1300px;
-	height: 600px;
+	width: 100%;
+	height: 500px;
 }
 
 #basicModal .footer-content {
 	width: 100%;
-	height: 140px;
+	height: 100px;
 	margin: 0px;
 	padding-top: 20px;
 	background: #31374c;
-	font-size: 22px;
+	font-size: 16px;
 	color: rgb(163,167,179);
 }
 
 #basicModal #ipViewHN {
-	margin-left: 10px;	
+	margin-left: 10px;		
 }
 #basicModal #ipViewHN .slider-selection {
 	background: rgb(253,153,126);
@@ -441,7 +440,7 @@
 }
 
 #basicModal #ipViewCN {
-	margin-left: 10px;	
+	margin-left: 10px;
 }
 #basicModal #ipViewCN .slider-selection {
 	background: rgb(253,153,126);
@@ -450,9 +449,17 @@
 	background: rgb(230,234,248);
 }
 
+#basicModal .footer-content .hotness {
+	margin-top: 10px;
+}
+
+#basicModal .footer-content .cheesiness {
+	margin-top: 10px;
+}
+
 #basicModal .footer-content .buttonBox button {
-	width: 140px;
-	height: 70px;
+	width: 120px;
+	height: 50px;
 	color: rgb(255,255,255);
 }
 
