--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -83,12 +83,16 @@
 
     <div class="menu_item row">
     	<div>English Subtitle</div>
-    	<input id="tcSubtitle" type="checkbox" class="toggle-checkbox" name="english_subtitle" data-size="small" data-on-color="info" checked>
+    	<!-- <input id="tcSubtitle" type="checkbox" class="toggle-checkbox" name="english_subtitle" data-size="small" data-on-color="info" checked> -->
+        <div class="flat-toggle" id="tcSubtitle"></div>            
+        <input id="ipSubtitle" name="english_subtitle" value="" type="hidden">
     </div>
 
     <div class="menu_item row">
     	<div>Official Video</div>
-    	<input id="tcOVideo" type="checkbox" class="toggle-checkbox" name="official" data-size="small" data-on-color="info" checked>
+    	<!-- <input id="tcOVideo" type="checkbox" class="toggle-checkbox" name="official" data-size="small" data-on-color="info" checked> -->
+        <div class="flat-toggle" id="tcOVideo"></div>            
+        <input id="ipOVideo" name="official" value="" type="hidden">
     </div>
 
     <!-- <div class="menu_item row">
@@ -98,7 +102,9 @@
 
     <div class="menu_item row">
     	<div>Licensed Content</div>
-    	<input id="tcLContent" type="checkbox" class="toggle-checkbox" name="licensed_content" data-size="small" data-on-color="info" checked>
+    	<!-- <input id="tcLContent" type="checkbox" class="toggle-checkbox" name="licensed_content" data-size="small" data-on-color="info" checked> -->
+        <div class="flat-toggle" id="tcLContent"></div>            
+        <input id="ipLContent" name="licensed_content" value="" type="hidden">
     </div>    
 
     <div class="menu_item row">
