--- a/app/views/main/_video_card.html.erb
+++ b/app/views/main/_video_card.html.erb
@@ -11,9 +11,9 @@
 		<div class="overlay">
 			<div class="song_title">{{title_korean}}</div>	
 			<div class="buttons row">
-				<div class="btnlike col-md-4">Like</div>
-				<div class="btnAdd col-md-4">Add</div>
-				<div class="btnLater col-md-4">Later</div>
+				<%= image_tag "main/hover_like.png" %> <div class="btnlike col-md-4">Like</div>
+				<%= image_tag "main/hover_add.png" %> <div class="btnAdd col-md-4">Add</div>
+				<%= image_tag "main/hover_later.png" %> <div class="btnLater col-md-4">Later</div>
 			</div>		
 		</div>
 	</div>
