adapting detail design

--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -11,22 +11,22 @@
         </div>
     </div>	
 
-    <div class="menu_item row">
+    <div class="menu_item">
         <div class="row">
             <div class="col-md-8">Daily Top</div>
         </div>
     </div>
-    <div class="menu_item row">
+    <div class="menu_item">
         <div class="row">
             <div class="col-md-8">Weekly Top</div>
         </div>
     </div>
-    <div class="menu_item row">
+    <div class="menu_item">
         <div class="row">
             <div class="col-md-8">Random</div>
         </div>
     </div>
-    <div class="menu_item row">
+    <div class="menu_item">
         <div class="row">
             <div class="col-md-8">Popular</div>
         </div>
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-	<div class="menu_item row">		
+	<div class="menu_item drop-menu">		
 		<div class="row">
 			<div class="col-md-8">Artist</div>
 		</div>
@@ -61,7 +61,7 @@
 		<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipNumSingers" data-slider-min="1" data-slider-max="7" data-slider-step="1" data-slider-value="[1,7]"/>
 	</div> -->
 
-	<div class="menu_item row">
+	<div class="menu_item drop-menu">
 		<div class="row">
 			<div class="col-md-8">Video Type</div>
 		</div>
@@ -81,15 +81,15 @@
 	    </div>
     </div>
 
-    <div class="menu_item row">
-    	<div>English Subtitle</div>
+    <div class="menu_item toggle-menu">
+    	<div class="menu_title">English Subtitle</div>
     	<!-- <input id="tcSubtitle" type="checkbox" class="toggle-checkbox" name="english_subtitle" data-size="small" data-on-color="info" checked> -->
         <div class="flat-toggle" id="tcSubtitle"></div>            
         <input id="ipSubtitle" name="english_subtitle" value="" type="hidden">
     </div>
 
-    <div class="menu_item row">
-    	<div>Official Video</div>
+    <div class="menu_item toggle-menu">
+    	<div class="menu_title">Official Video</div>
     	<!-- <input id="tcOVideo" type="checkbox" class="toggle-checkbox" name="official" data-size="small" data-on-color="info" checked> -->
         <div class="flat-toggle" id="tcOVideo"></div>            
         <input id="ipOVideo" name="official" value="" type="hidden">
@@ -100,14 +100,14 @@
     	<input type="checkbox" name="toggle-checkbox" data-size="small" data-on-color="info" checked>
     </div> -->
 
-    <div class="menu_item row">
-    	<div>Licensed Content</div>
+    <div class="menu_item toggle-menu">
+    	<div class="menu_title">Licensed Content</div>
     	<!-- <input id="tcLContent" type="checkbox" class="toggle-checkbox" name="licensed_content" data-size="small" data-on-color="info" checked> -->
         <div class="flat-toggle" id="tcLContent"></div>            
         <input id="ipLContent" name="licensed_content" value="" type="hidden">
     </div>    
 
-    <div class="menu_item row">
+    <div class="menu_item slider-menu">
     	<div class="row">
 			<div class="col-md-8">Sexy Score</div><div class="strVar">0 - 10</div>
 		</div>
@@ -116,7 +116,7 @@
     	<input id="hnMax" name="hotness[max]" type="hidden" value="10">
     </div>
 
-    <div class="menu_item row">
+    <div class="menu_item slider-menu">
     	<div class="row">
 			<div class="col-md-8">Cheesy Score</div><div class="strVar">0 - 10</div>
 		</div>
@@ -125,7 +125,7 @@
     	<input id="cnMax" name="cheesiness[max]" type="hidden" value="10">
     </div>
 
-    <div class="menu_item row">
+    <div class="menu_item slider-menu">
     	<div class="row">
 			<div class="col-md-8">English Lyrics (%)</div><div class="strVar">0 - 100</div>
 		</div>
@@ -134,7 +134,7 @@
     	<input id="epMax" name="english_percentage[max]" type="hidden" value="100">
     </div>
 
-    <div class="menu_item row">
+    <div class="menu_item slider-menu">
     	<div class="row">
 			<div class="col-md-8">Approval Rating</div><div class="strVar">0 - 100</div>
 		</div>
