--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -25,10 +25,20 @@
 }
 
 .menu_item {
+	width: 100%;
+	height: 35px;	
 	margin: 20px;	
-	padding-left: 47px;
+	padding-left: 10px;
 	font-size: 16px;
 	color: rgb(199,203,213);
+}
+
+.menu_item.drop-menu {
+	height: 60px;	
+}
+
+.menu_item.drop-menu .dropdown {
+	margin-top: 10px;
 }
 
 #sidebar .dropdown button{
@@ -56,17 +66,28 @@
 	background: rgb(255,64,79);
 }
 
+#sidebar .menu_item.toggle-menu {
+	height: 50px;
+}
+
+#sidebar .menu_item .menu_title {
+	display: inline-block;
+	margin-top: 20px;
+}
+
 //toggle button
 #sidebar .bootstrap-switch-handle-on {
 	background: rgb(253,153,126);
 }
 
 .flat-toggle {
+	display: inline-block;
     width: 56px;
     border-radius: 10px;
     height: 22px;
     background: rgb(27,30,46);
-    position: relative;
+    position: absolute;
+    right: 28px;
     margin: 20px 0;
     -moz-user-select: none;
     -khtml-user-select: none;
@@ -110,6 +131,10 @@
 
 
 //slider
+#sidebar .menu_item.slider-menu {
+	height: 50px;
+}
+
 #ipNumSingers .slider-selection {
 	background: rgb(253,153,126);
 }
@@ -337,7 +362,7 @@
 }
 
 .box .overlay {
-	display: none;
+	display: none;	
 
 	position: absolute;
 	top: 0;
@@ -358,10 +383,26 @@
 
 .box .overlay .buttons {
 	position: absolute;
-	bottom: 10px;
+	left: 15px;
+	bottom: 2px;
 	font-size: 18px;	
 	color: rgb(255,255,255);
+	width: 100%;
+	height: 60px;
+	background: rgba(44,69,104, 0.7);
 }
+
+.box .overlay .buttons img {
+	width: 18px;
+	height: 18px;
+}
+
+.box .overlay .buttons div {
+	display: inline-block;
+	width: 143px;
+	line-height: 60px;
+}
+
 
 .vlist {
 	display: inline-block;
