--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -28,7 +28,7 @@
                 <span>Cheesy Score</span>
                 <input id="ipViewCN" name="view-slider" type="text" class="view_slider" value="" data-slider-id="ipViewCN" data-slider-min="0" data-slider-max="10" data-slider-step="1"/>
             </div>
-            <div class="buttonBox col-md-4">
+            <div class="buttonBox">
               <button class="btnLike"><%=image_tag "main/video_player/like_btn.png" %> Like</button>
               <button class="btnAdd"><%=image_tag "main/video_player/add_btn.png" %> Add</button>
             </div>
