--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -24,6 +24,10 @@
 	font-size: 20px;	
 }
 
+.menu_header .row {
+	line-height: 12px;
+}
+
 .menu_item {
 	width: 100%;
 	height: 35px;	
@@ -236,14 +240,18 @@
 
 .top_bar .dropdownP {
 	position: absolute;
-	top: 20px;
+	top: 25px;
 	right: 220px;	
 }
 
 .top_bar .dropdownP .login-widget {
 	font-size: 16px;
-	color: rgb(51,58,77);
+	color: rgb(51,58,77);	
 	margin-right: 15px;
+}
+
+.top_bar .dropdownP .login-widget:hover {
+	background: rgb(255,255,255);
 }
 
 .top_bar hr {	
@@ -266,10 +274,15 @@
 	line-height: 80px;
 }
 
+.header_panel .dropdown {
+	margin-top: 15px;
+}
+
 .header_panel .dropdown .btnSort{	
-	margin-right: 10px;
+	margin-right: 10px;	
 	width: 200px;
 	height: 50px;
+	line-height: 30px;
 	font-size: 14px;
 	color: rgb(128,128,128);
 	background-color: rgb(255,255,255);
@@ -305,7 +318,7 @@
 } 
 
 .header_panel .btn-group {
-	margin-top: 5px;
+	margin-top: 12px;
 	margin-left: 20px;
 }
 
@@ -469,6 +482,7 @@
 
 #basicModal .titleD {	
 	margin: 30px;
+	margin-left: 45px;
 	font-size: 26px;
 	font-weight: bold;
 	color: rgb(101,107,124);
@@ -544,6 +558,11 @@
 
 #basicModal .footer-content .cheesiness {
 	margin-top: 10px;
+}
+
+#basicModal .footer-content .buttonBox {
+	display: inline-block;
+	margin-left: 85px;
 }
 
 #basicModal .footer-content .buttonBox button {
