--- a/app/views/main/_video_dialog.html.erb
+++ b/app/views/main/_video_dialog.html.erb
@@ -22,11 +22,13 @@
           <div class="footer-content row">
             <div class="hotness col-md-4">
                 <span>Sexy Score</span>
-                <input id="ipViewHN" name="view-slider" type="text" class="view_slider" value="" data-slider-id="ipViewHN" data-slider-min="0" data-slider-max="10" data-slider-step="1"/>
+                <input id="ipViewHN" name="view-slider" type="text" class="view_slider" value="" data-slider-id="ipViewHN" data-slider-min="0" data-slider-max="10" data-slider-step="1"
+                data-slider-enabled="false"/>
             </div>
             <div class="cheesiness col-md-4">
                 <span>Cheesy Score</span>
-                <input id="ipViewCN" name="view-slider" type="text" class="view_slider" value="" data-slider-id="ipViewCN" data-slider-min="0" data-slider-max="10" data-slider-step="1"/>
+                <input id="ipViewCN" name="view-slider" type="text" class="view_slider" value="" data-slider-id="ipViewCN" data-slider-min="0" data-slider-max="10" data-slider-step="1" 
+                data-slider-enabled="false"/>
             </div>
             <div class="buttonBox">
               <button class="btnLike"><%=image_tag "main/video_player/like_btn.png" %> Like</button>
