--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -45,7 +45,7 @@
 		</div>
 		<div class="row">
 			<div class="dropdown col-md-4">
-	            <button class="btn btn-default dropdown-toggle" type="button" id="ddArtist" data-toggle="dropdown" aria-expanded="true"><span class="selection col-md-11">All</span> <span class="caret"></span></button>
+	            <button class="btn dropdown-toggle" type="button" id="ddArtist" data-toggle="dropdown" aria-expanded="true"><span class="selection col-md-11">All</span> <span class="caret"></span></button>
 	            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 	              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Girl's Generation</a></li>
 	              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Psy</a></li>              
@@ -68,7 +68,7 @@
 		<div class="row">
             <input id="ipVType" name="category" value="all" type="hidden">
 			<div class="dropdown col-md-4">
-	            <button class="btn btn-default dropdown-toggle" type="button" id="ddVideoType" data-toggle="dropdown" aria-expanded="true"><span class="selection col-md-11">All</span> <span class="caret"></span></button>
+	            <button class="btn dropdown-toggle" type="button" id="ddVideoType" data-toggle="dropdown" aria-expanded="true"><span class="selection col-md-11">All</span> <span class="caret"></span></button>
 	            <ul id="ddVType" class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
                     <li role="presentation"><a role="menuitem" value="all" tabindex="-1" href="#">All</a></li>
 	              	<li role="presentation"><a role="menuitem" value="teaser" tabindex="-1" href="#">Teaser</a></li>
