--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -30,7 +30,7 @@
 
 .menu_item {
 	width: 100%;
-	height: 35px;	
+	height: 25px;	
 	margin: 20px;	
 	padding-left: 10px;
 	font-size: 16px;
@@ -49,8 +49,7 @@
 	box-sizing: border-box;		
 	width: 210px;	
 	height: 35px;
-	background-color: #3e445c;			
-	border: 1px solid rgb(255,255,255);
+	background-color: #252a3d;				
 	color: rgb(255,255,255);
 }
 
@@ -71,7 +70,7 @@
 }
 
 #sidebar .menu_item.toggle-menu {
-	height: 50px;
+	height: 30px;
 }
 
 #sidebar .menu_item .menu_title {
@@ -89,7 +88,7 @@
     width: 56px;
     border-radius: 10px;
     height: 22px;
-    background: rgb(27,30,46);
+    background: #252a3d;
     position: absolute;
     right: 28px;
     margin: 20px 0;
@@ -275,16 +274,16 @@
 }
 
 .header_panel .dropdown {
-	margin-top: 15px;
+	margin-top: 20px;
 }
 
 .header_panel .dropdown .btnSort{	
 	margin-right: 10px;	
 	width: 200px;
-	height: 50px;
-	line-height: 30px;
+	height: 40px;
+	line-height: 15px;
 	font-size: 14px;
-	color: rgb(128,128,128);
+	color: #a3a7b3;
 	background-color: rgb(255,255,255);
 }
 
@@ -381,7 +380,7 @@
 	top: 0;
 	width: 100%;
 	height: 270px;
-	background: rgba(0,0,0,0.7);
+	background: rgba(51,58,77,0.7);
 	border-radius: 5px;
 }
 
@@ -390,7 +389,7 @@
 	top: 65px;
 	left: 17px;
 	padding: 10px;
-	font-size: 30px;
+	font-size: 22px;
 	color: rgba(255,255,255,1);			
 	white-space: normal;
 }
@@ -403,7 +402,7 @@
 	color: rgb(255,255,255);
 	width: 100%;
 	height: 60px;
-	background: rgba(44,69,104, 0.7);
+	background: rgba(51,58,77, 0.9);
 }
 
 .box .overlay .buttons img {
