--- a/app/views/main/_left_menu.html.erb
+++ b/app/views/main/_left_menu.html.erb
@@ -7,7 +7,7 @@
     <div class="menu_header row">     
         <div class="row">
             <div class="col-md-8">Discover</div>
-            <div class="col-md-2"><span class="caret"></span></div>
+            <div class="col-md-2"><%=image_tag "main/unfold.png", :class => 'unfold' %></div>
         </div>
     </div>	
 
@@ -35,7 +35,7 @@
     <div class="menu_header row">     
         <div class="row">
             <div class="col-md-8">Filter</div>
-            <div class="col-md-2"><span class="caret"></span></div>
+            <div class="col-md-2"><%=image_tag "main/unfold.png", :class => 'unfold' %></div>
         </div>
     </div>
 
@@ -52,14 +52,7 @@
 	            </ul>
 	        </div>		
 	    </div>
-	</div>		
-
-	<!-- <div class="menu_item row">
-		<div class="row">
-			<div class="col-md-8">Number of Singers</div><div class="strVar">3 - 5</div>
-		</div>
-		<input name="interval-slider" type="text" class="inter_slider" value="" data-slider-id="ipNumSingers" data-slider-min="1" data-slider-max="7" data-slider-step="1" data-slider-value="[1,7]"/>
-	</div> -->
+	</div>			
 
 	<div class="menu_item drop-menu">
 		<div class="row">
@@ -119,22 +112,19 @@
 
 
     <div class="menu_item toggle-menu">
-    	<div class="menu_title">English Subtitle</div>
-    	<!-- <input id="tcSubtitle" type="checkbox" class="toggle-checkbox" name="english_subtitle" data-size="small" data-on-color="info" checked> -->
+    	<div class="menu_title">English Subtitle</div>    	
         <div class="flat-toggle" id="tcSubtitle"></div>            
         <input id="ipSubtitle" name="english_subtitle" value="" type="hidden">
     </div>
 
     <div class="menu_item toggle-menu">
-    	<div class="menu_title">Official Video</div>
-    	<!-- <input id="tcOVideo" type="checkbox" class="toggle-checkbox" name="official" data-size="small" data-on-color="info" checked> -->
+    	<div class="menu_title">Official Video</div>    	
         <div class="flat-toggle" id="tcOVideo"></div>            
         <input id="ipOVideo" name="official" value="" type="hidden">
     </div>
 
     <div class="menu_item toggle-menu">
-    	<div class="menu_title">Licensed Content</div>
-    	<!-- <input id="tcLContent" type="checkbox" class="toggle-checkbox" name="licensed_content" data-size="small" data-on-color="info" checked> -->
+    	<div class="menu_title">Licensed Content</div>    	
         <div class="flat-toggle" id="tcLContent"></div>            
         <input id="ipLContent" name="licensed_content" value="" type="hidden">
     </div>    
