--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div id="sidebar">
       <div class="top_bar">
-        <h2 class="titleFilter">KpopTV</h2>        
+        <div class="titleFilter"><%= image_tag("main/kpoptv_logo.png")%> KpopTV</div>        
       </div>
 
       <%= render 'left_menu' %>
