--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -366,6 +366,7 @@ button:focus {outline:0 !important;}
 	box-shadow: 0px 3px 0px 0px rgba(220,220,220,1);	
 	text-align: center;
 	margin-bottom: 25px;
+	cursor: pointer;
 }
 
 .box:hover {
