--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -39,6 +39,7 @@ button:focus {outline:0 !important;}
 
 .menu_header .unfold {
 	margin-top: -8px;
+	width: 20px;
 }
 
 .menu_item {
@@ -212,6 +213,10 @@ button:focus {outline:0 !important;}
 
 .top_bar {	
 	height: 60px;					
+}
+
+.top_bar .logo {
+	width: 36px;
 }
 
 .top_bar .titleFilter {	
@@ -490,7 +495,7 @@ button:focus {outline:0 !important;}
 
 /* video Modal */
 #basicModal .modal-dialog {
-	width: 1100px;
+	width: 900px;
 }
 
 #basicModal .modal-body {
@@ -498,23 +503,38 @@ button:focus {outline:0 !important;}
 }
 
 #basicModal .titleD {	
-	margin: 30px;
+	margin: 20px;
 	margin-left: 45px;
-	font-size: 26px;
+	font-size: 20px;
 	font-weight: bold;
 	color: rgb(101,107,124);
 }
 
 #basicModal .close {
 	position: absolute;
+	width: 28px;
 	top: 20px;
-	right: 20px;	
+	right: 20px;
+	color: #656b7c;
+	text-shadow: 0 1px 0 #fff;	
 }
 
 #basicModal .detail-infos {	
-	margin: 30px;
-	font-size: 16px;
+	margin: 15px;
+	font-size: 14px;
 	color: rgb(163,167,179);
+}
+
+#basicModal .detail-infos .imgview {
+	width: 28px;
+}
+
+#basicModal .detail-infos .imglike {
+	width: 22px;
+}
+
+#basicModal .detail-infos .imgdislike {
+	width: 22px;
 }
 
 #basicModal .detail-infos .youtube_user_id {
@@ -541,11 +561,11 @@ button:focus {outline:0 !important;}
 
 #basicModal .footer-content {
 	width: 100%;
-	height: 100px;
+	height: 80px;
 	margin: 0px;
-	padding-top: 20px;
+	padding-top: 5px;
 	background: #31374c;
-	font-size: 16px;
+	font-size: 14px;
 	color: rgb(163,167,179);
 }
 
@@ -578,8 +598,10 @@ button:focus {outline:0 !important;}
 }
 
 #basicModal .footer-content .buttonBox {
-	display: inline-block;
-	margin-left: 85px;
+	display: inline-block;	
+	float: right;
+	margin-right: 20px;
+	margin-top: 10px;
 }
 
 #basicModal .footer-content .buttonBox button {
@@ -590,8 +612,10 @@ button:focus {outline:0 !important;}
 
 #basicModal .footer-content .buttonBox .btnLike {
 	background: rgb(253,153,126);
+	cursor: pointer;
 }
 
 #basicModal .footer-content .buttonBox .btnAdd {
-	background: rgb(184,184,184) 
+	background: rgb(184,184,184); 
+	cursor: pointer;
 }
